cmake_minimum_required(VERSION 3.14)
project(bsnes)

set(CMAKE_CXX_STANDARD 14)

include_directories(angelscript/add_on/scriptarray)
include_directories(angelscript/include)
include_directories(bsnes)
include_directories(hiro)
include_directories(libco)
include_directories(nall)
include_directories(ruby)
include_directories(.)

add_compile_definitions(Hiro_Canvas)

add_executable(bsnes
        bsnes/emulator/audio/audio.cpp
        bsnes/emulator/audio/audio.hpp
        bsnes/emulator/audio/stream.cpp
        bsnes/emulator/memory/memory.hpp
        bsnes/emulator/memory/readable.hpp
        bsnes/emulator/memory/writable.hpp
        bsnes/emulator/cheat.hpp
        bsnes/emulator/emulator.cpp
        bsnes/emulator/emulator.hpp
        bsnes/emulator/game.hpp
        bsnes/emulator/interface.hpp
        bsnes/emulator/platform.hpp
        bsnes/emulator/random.hpp
        bsnes/emulator/types.hpp
        bsnes/filter/sai/sai.cpp
        bsnes/filter/snes_ntsc/snes_ntsc.c
        bsnes/filter/snes_ntsc/snes_ntsc.h
        bsnes/filter/snes_ntsc/snes_ntsc_config.h
        bsnes/filter/snes_ntsc/snes_ntsc_impl.h
        bsnes/filter/2xsai.cpp
        bsnes/filter/filter.cpp
        bsnes/filter/filter.hpp
        bsnes/filter/hq2x.cpp
        bsnes/filter/lq2x.cpp
        bsnes/filter/none.cpp
        bsnes/filter/ntsc-composite.cpp
        bsnes/filter/ntsc-rf.cpp
        bsnes/filter/ntsc-rgb.cpp
        bsnes/filter/ntsc-svideo.cpp
        bsnes/filter/pixellate2x.cpp
        bsnes/filter/scale2x.cpp
        bsnes/filter/scanlines-black.cpp
        bsnes/filter/scanlines-dark.cpp
        bsnes/filter/scanlines-light.cpp
        bsnes/filter/super-2xsai.cpp
        bsnes/filter/super-eagle.cpp
        bsnes/gb/Core/apu.c
        bsnes/gb/Core/apu.h
        bsnes/gb/Core/camera.c
        bsnes/gb/Core/camera.h
        bsnes/gb/Core/debugger.c
        bsnes/gb/Core/debugger.h
        bsnes/gb/Core/display.c
        bsnes/gb/Core/display.h
        bsnes/gb/Core/gb.c
        bsnes/gb/Core/gb.h
        bsnes/gb/Core/gb_struct_def.h
        bsnes/gb/Core/joypad.c
        bsnes/gb/Core/joypad.h
        bsnes/gb/Core/mbc.c
        bsnes/gb/Core/mbc.h
        bsnes/gb/Core/memory.c
        bsnes/gb/Core/memory.h
        bsnes/gb/Core/printer.c
        bsnes/gb/Core/printer.h
        bsnes/gb/Core/random.c
        bsnes/gb/Core/random.h
        bsnes/gb/Core/rewind.c
        bsnes/gb/Core/rewind.h
        bsnes/gb/Core/save_state.c
        bsnes/gb/Core/save_state.h
        bsnes/gb/Core/sgb.c
        bsnes/gb/Core/sgb.h
        bsnes/gb/Core/sm83_cpu.c
        bsnes/gb/Core/sm83_cpu.h
        bsnes/gb/Core/sm83_disassembler.c
        bsnes/gb/Core/symbol_hash.c
        bsnes/gb/Core/symbol_hash.h
        bsnes/gb/Core/timing.c
        bsnes/gb/Core/timing.h
        bsnes/heuristics/bs-memory.cpp
        bsnes/heuristics/game-boy.cpp
        bsnes/heuristics/heuristics.cpp
        bsnes/heuristics/heuristics.hpp
        bsnes/heuristics/sufami-turbo.cpp
        bsnes/heuristics/super-famicom.cpp
        bsnes/lzma/7z.h
        bsnes/lzma/7zAlloc.c
        bsnes/lzma/7zAlloc.h
        bsnes/lzma/7zArcIn.c
        bsnes/lzma/7zBuf.c
        bsnes/lzma/7zBuf.h
        bsnes/lzma/7zBuf2.c
        bsnes/lzma/7zCrc.c
        bsnes/lzma/7zCrc.h
        bsnes/lzma/7zCrcOpt.c
        bsnes/lzma/7zDec.c
        bsnes/lzma/7zFile.c
        bsnes/lzma/7zFile.h
        bsnes/lzma/7zStream.c
        bsnes/lzma/7zTypes.h
        bsnes/lzma/7zVersion.h
        bsnes/lzma/Aes.c
        bsnes/lzma/Aes.h
        bsnes/lzma/AesOpt.c
        bsnes/lzma/Alloc.c
        bsnes/lzma/Alloc.h
        bsnes/lzma/Bcj2.c
        bsnes/lzma/Bcj2.h
        bsnes/lzma/Bcj2Enc.c
        bsnes/lzma/Bra.c
        bsnes/lzma/Bra.h
        bsnes/lzma/Bra86.c
        bsnes/lzma/BraIA64.c
        bsnes/lzma/Compiler.h
        bsnes/lzma/CpuArch.c
        bsnes/lzma/CpuArch.h
        bsnes/lzma/Delta.c
        bsnes/lzma/Delta.h
        bsnes/lzma/DllSecur.c
        bsnes/lzma/DllSecur.h
        bsnes/lzma/LzFind.c
        bsnes/lzma/LzFind.h
        bsnes/lzma/LzFindMt.c
        bsnes/lzma/LzFindMt.h
        bsnes/lzma/LzHash.h
        bsnes/lzma/lzma.cpp
        bsnes/lzma/lzma.hpp
        bsnes/lzma/Lzma2Dec.c
        bsnes/lzma/Lzma2Dec.h
        bsnes/lzma/Lzma2DecMt.c
        bsnes/lzma/Lzma2DecMt.h
        bsnes/lzma/Lzma2Enc.c
        bsnes/lzma/Lzma2Enc.h
        bsnes/lzma/Lzma86.h
        bsnes/lzma/Lzma86Dec.c
        bsnes/lzma/Lzma86Enc.c
        bsnes/lzma/LzmaDec.c
        bsnes/lzma/LzmaDec.h
        bsnes/lzma/LzmaEnc.c
        bsnes/lzma/LzmaEnc.h
        bsnes/lzma/LzmaLib.c
        bsnes/lzma/LzmaLib.h
        bsnes/lzma/MtCoder.c
        bsnes/lzma/MtCoder.h
        bsnes/lzma/MtDec.c
        bsnes/lzma/MtDec.h
        bsnes/lzma/Ppmd.h
        bsnes/lzma/Ppmd7.c
        bsnes/lzma/Ppmd7.h
        bsnes/lzma/Ppmd7Dec.c
        bsnes/lzma/Ppmd7Enc.c
        bsnes/lzma/Precomp.h
        bsnes/lzma/RotateDefs.h
        bsnes/lzma/Sha256.c
        bsnes/lzma/Sha256.h
        bsnes/lzma/Sort.c
        bsnes/lzma/Sort.h
        bsnes/lzma/Threads.c
        bsnes/lzma/Threads.h
        bsnes/lzma/Xz.c
        bsnes/lzma/Xz.h
        bsnes/lzma/XzCrc64.c
        bsnes/lzma/XzCrc64.h
        bsnes/lzma/XzCrc64Opt.c
        bsnes/lzma/XzDec.c
        bsnes/lzma/XzEnc.c
        bsnes/lzma/XzEnc.h
        bsnes/lzma/XzIn.c
        bsnes/processor/arm7tdmi/algorithms.cpp
        bsnes/processor/arm7tdmi/arm7tdmi.cpp
        bsnes/processor/arm7tdmi/arm7tdmi.hpp
        bsnes/processor/arm7tdmi/disassembler.cpp
        bsnes/processor/arm7tdmi/instruction.cpp
        bsnes/processor/arm7tdmi/instructions-arm.cpp
        bsnes/processor/arm7tdmi/instructions-thumb.cpp
        bsnes/processor/arm7tdmi/memory.cpp
        bsnes/processor/arm7tdmi/registers.cpp
        bsnes/processor/arm7tdmi/serialization.cpp
        bsnes/processor/gsu/disassembler.cpp
        bsnes/processor/gsu/gsu.cpp
        bsnes/processor/gsu/gsu.hpp
        bsnes/processor/gsu/instruction.cpp
        bsnes/processor/gsu/instructions.cpp
        bsnes/processor/gsu/registers.hpp
        bsnes/processor/gsu/serialization.cpp
        bsnes/processor/hg51b/hg51b.cpp
        bsnes/processor/hg51b/hg51b.hpp
        bsnes/processor/hg51b/instruction.cpp
        bsnes/processor/hg51b/instructions.cpp
        bsnes/processor/hg51b/registers.cpp
        bsnes/processor/hg51b/serialization.cpp
        bsnes/processor/sm83/algorithms.cpp
        bsnes/processor/sm83/disassembler.cpp
        bsnes/processor/sm83/instruction.cpp
        bsnes/processor/sm83/instructions.cpp
        bsnes/processor/sm83/memory.cpp
        bsnes/processor/sm83/registers.cpp
        bsnes/processor/sm83/serialization.cpp
        bsnes/processor/sm83/sm83.cpp
        bsnes/processor/sm83/sm83.hpp
        bsnes/processor/spc700/algorithms.cpp
        bsnes/processor/spc700/disassembler.cpp
        bsnes/processor/spc700/instruction.cpp
        bsnes/processor/spc700/instructions.cpp
        bsnes/processor/spc700/memory.cpp
        bsnes/processor/spc700/serialization.cpp
        bsnes/processor/spc700/spc700.cpp
        bsnes/processor/spc700/spc700.hpp
        bsnes/processor/upd96050/disassembler.cpp
        bsnes/processor/upd96050/instructions.cpp
        bsnes/processor/upd96050/memory.cpp
        bsnes/processor/upd96050/serialization.cpp
        bsnes/processor/upd96050/upd96050.cpp
        bsnes/processor/upd96050/upd96050.hpp
        bsnes/processor/wdc65816/algorithms.cpp
        bsnes/processor/wdc65816/disassembler.cpp
        bsnes/processor/wdc65816/instruction.cpp
        bsnes/processor/wdc65816/instruction.hpp
        bsnes/processor/wdc65816/instructions-modify.cpp
        bsnes/processor/wdc65816/instructions-other.cpp
        bsnes/processor/wdc65816/instructions-pc.cpp
        bsnes/processor/wdc65816/instructions-read.cpp
        bsnes/processor/wdc65816/instructions-write.cpp
        bsnes/processor/wdc65816/memory.cpp
        bsnes/processor/wdc65816/registers.hpp
        bsnes/processor/wdc65816/serialization.cpp
        bsnes/processor/wdc65816/wdc65816.cpp
        bsnes/processor/wdc65816/wdc65816.hpp
        bsnes/processor/processor.hpp
        bsnes/sfc/cartridge/cartridge.cpp
        bsnes/sfc/cartridge/cartridge.hpp
        bsnes/sfc/cartridge/load.cpp
        bsnes/sfc/cartridge/save.cpp
        bsnes/sfc/cartridge/serialization.cpp
        bsnes/sfc/controller/gamepad/gamepad.cpp
        bsnes/sfc/controller/gamepad/gamepad.hpp
        bsnes/sfc/controller/justifier/justifier.cpp
        bsnes/sfc/controller/justifier/justifier.hpp
        bsnes/sfc/controller/mouse/mouse.cpp
        bsnes/sfc/controller/mouse/mouse.hpp
        bsnes/sfc/controller/super-multitap/super-multitap.cpp
        bsnes/sfc/controller/super-multitap/super-multitap.hpp
        bsnes/sfc/controller/super-scope/super-scope.cpp
        bsnes/sfc/controller/super-scope/super-scope.hpp
        bsnes/sfc/controller/controller.cpp
        bsnes/sfc/controller/controller.hpp
        bsnes/sfc/coprocessor/armdsp/armdsp.cpp
        bsnes/sfc/coprocessor/armdsp/armdsp.hpp
        bsnes/sfc/coprocessor/armdsp/memory.cpp
        bsnes/sfc/coprocessor/armdsp/registers.hpp
        bsnes/sfc/coprocessor/armdsp/serialization.cpp
        bsnes/sfc/coprocessor/cx4/cx4.cpp
        bsnes/sfc/coprocessor/cx4/cx4.hpp
        bsnes/sfc/coprocessor/cx4/data.cpp
        bsnes/sfc/coprocessor/cx4/functions.cpp
        bsnes/sfc/coprocessor/cx4/oam.cpp
        bsnes/sfc/coprocessor/cx4/opcodes.cpp
        bsnes/sfc/coprocessor/cx4/serialization.cpp
        bsnes/sfc/coprocessor/dip/dip.cpp
        bsnes/sfc/coprocessor/dip/dip.hpp
        bsnes/sfc/coprocessor/dip/serialization.cpp
        bsnes/sfc/coprocessor/dsp1/dsp1.cpp
        bsnes/sfc/coprocessor/dsp1/dsp1.hpp
        bsnes/sfc/coprocessor/dsp1/dsp1emu.cpp
        bsnes/sfc/coprocessor/dsp1/dsp1emu.hpp
        bsnes/sfc/coprocessor/dsp1/serialization.cpp
        bsnes/sfc/coprocessor/dsp2/dsp2.cpp
        bsnes/sfc/coprocessor/dsp2/dsp2.hpp
        bsnes/sfc/coprocessor/dsp2/opcodes.cpp
        bsnes/sfc/coprocessor/dsp2/serialization.cpp
        bsnes/sfc/coprocessor/dsp4/dsp4.cpp
        bsnes/sfc/coprocessor/dsp4/dsp4.hpp
        bsnes/sfc/coprocessor/dsp4/dsp4emu.c
        bsnes/sfc/coprocessor/dsp4/dsp4emu.h
        bsnes/sfc/coprocessor/dsp4/serialization.cpp
        bsnes/sfc/coprocessor/epsonrtc/epsonrtc.cpp
        bsnes/sfc/coprocessor/epsonrtc/epsonrtc.hpp
        bsnes/sfc/coprocessor/epsonrtc/memory.cpp
        bsnes/sfc/coprocessor/epsonrtc/serialization.cpp
        bsnes/sfc/coprocessor/epsonrtc/time.cpp
        bsnes/sfc/coprocessor/event/event.cpp
        bsnes/sfc/coprocessor/event/event.hpp
        bsnes/sfc/coprocessor/event/serialization.cpp
        bsnes/sfc/coprocessor/hitachidsp/data-rom.cpp
        bsnes/sfc/coprocessor/hitachidsp/hitachidsp.cpp
        bsnes/sfc/coprocessor/hitachidsp/hitachidsp.hpp
        bsnes/sfc/coprocessor/hitachidsp/memory.cpp
        bsnes/sfc/coprocessor/hitachidsp/serialization.cpp
        bsnes/sfc/coprocessor/icd/boot-roms.cpp
        bsnes/sfc/coprocessor/icd/icd.cpp
        bsnes/sfc/coprocessor/icd/icd.hpp
        bsnes/sfc/coprocessor/icd/interface.cpp
        bsnes/sfc/coprocessor/icd/io.cpp
        bsnes/sfc/coprocessor/icd/serialization.cpp
        bsnes/sfc/coprocessor/mcc/mcc.cpp
        bsnes/sfc/coprocessor/mcc/mcc.hpp
        bsnes/sfc/coprocessor/mcc/serialization.cpp
        bsnes/sfc/coprocessor/msu1/msu1.cpp
        bsnes/sfc/coprocessor/msu1/msu1.hpp
        bsnes/sfc/coprocessor/msu1/serialization.cpp
        bsnes/sfc/coprocessor/necdsp/necdsp.cpp
        bsnes/sfc/coprocessor/necdsp/necdsp.hpp
        bsnes/sfc/coprocessor/necdsp/serialization.cpp
        bsnes/sfc/coprocessor/obc1/obc1.cpp
        bsnes/sfc/coprocessor/obc1/obc1.hpp
        bsnes/sfc/coprocessor/obc1/serialization.cpp
        bsnes/sfc/coprocessor/sa1/bwram.cpp
        bsnes/sfc/coprocessor/sa1/dma.cpp
        bsnes/sfc/coprocessor/sa1/io.cpp
        bsnes/sfc/coprocessor/sa1/iram.cpp
        bsnes/sfc/coprocessor/sa1/memory.cpp
        bsnes/sfc/coprocessor/sa1/rom.cpp
        bsnes/sfc/coprocessor/sa1/sa1.cpp
        bsnes/sfc/coprocessor/sa1/sa1.hpp
        bsnes/sfc/coprocessor/sa1/serialization.cpp
        bsnes/sfc/coprocessor/sdd1/decompressor.cpp
        bsnes/sfc/coprocessor/sdd1/decompressor.hpp
        bsnes/sfc/coprocessor/sdd1/sdd1.cpp
        bsnes/sfc/coprocessor/sdd1/sdd1.hpp
        bsnes/sfc/coprocessor/sdd1/serialization.cpp
        bsnes/sfc/coprocessor/sharprtc/memory.cpp
        bsnes/sfc/coprocessor/sharprtc/serialization.cpp
        bsnes/sfc/coprocessor/sharprtc/sharprtc.cpp
        bsnes/sfc/coprocessor/sharprtc/sharprtc.hpp
        bsnes/sfc/coprocessor/sharprtc/time.cpp
        bsnes/sfc/coprocessor/spc7110/alu.cpp
        bsnes/sfc/coprocessor/spc7110/data.cpp
        bsnes/sfc/coprocessor/spc7110/dcu.cpp
        bsnes/sfc/coprocessor/spc7110/decompressor.cpp
        bsnes/sfc/coprocessor/spc7110/serialization.cpp
        bsnes/sfc/coprocessor/spc7110/spc7110.cpp
        bsnes/sfc/coprocessor/spc7110/spc7110.hpp
        bsnes/sfc/coprocessor/st0010/data.hpp
        bsnes/sfc/coprocessor/st0010/opcodes.cpp
        bsnes/sfc/coprocessor/st0010/serialization.cpp
        bsnes/sfc/coprocessor/st0010/st0010.cpp
        bsnes/sfc/coprocessor/st0010/st0010.hpp
        bsnes/sfc/coprocessor/superfx/bus.cpp
        bsnes/sfc/coprocessor/superfx/core.cpp
        bsnes/sfc/coprocessor/superfx/io.cpp
        bsnes/sfc/coprocessor/superfx/memory.cpp
        bsnes/sfc/coprocessor/superfx/serialization.cpp
        bsnes/sfc/coprocessor/superfx/superfx.cpp
        bsnes/sfc/coprocessor/superfx/superfx.hpp
        bsnes/sfc/coprocessor/superfx/timing.cpp
        bsnes/sfc/coprocessor/coprocessor.cpp
        bsnes/sfc/coprocessor/coprocessor.hpp
        bsnes/sfc/cpu/cpu.cpp
        bsnes/sfc/cpu/cpu.hpp
        bsnes/sfc/cpu/dma.cpp
        bsnes/sfc/cpu/io.cpp
        bsnes/sfc/cpu/irq.cpp
        bsnes/sfc/cpu/memory.cpp
        bsnes/sfc/cpu/serialization.cpp
        bsnes/sfc/cpu/timing.cpp
        bsnes/sfc/dsp/blargg_common.h
        bsnes/sfc/dsp/blargg_config.h
        bsnes/sfc/dsp/blargg_endian.h
        bsnes/sfc/dsp/blargg_source.h
        bsnes/sfc/dsp/dsp.cpp
        bsnes/sfc/dsp/dsp.hpp
        bsnes/sfc/dsp/serialization.cpp
        bsnes/sfc/dsp/SPC_DSP.cpp
        bsnes/sfc/dsp/SPC_DSP.h
        bsnes/sfc/expansion/21fx/21fx.cpp
        bsnes/sfc/expansion/21fx/21fx.hpp
        bsnes/sfc/expansion/satellaview/satellaview.cpp
        bsnes/sfc/expansion/satellaview/satellaview.hpp
        bsnes/sfc/expansion/expansion.cpp
        bsnes/sfc/expansion/expansion.hpp
        bsnes/sfc/interface/configuration.cpp
        bsnes/sfc/interface/configuration.hpp
        bsnes/sfc/interface/interface.cpp
        bsnes/sfc/interface/interface.hpp
        bsnes/sfc/interface/script-interface.cpp
        bsnes/sfc/interface/script-string.cpp
        bsnes/sfc/interface/vga-charset.cpp
        bsnes/sfc/memory/memory-inline.hpp
        bsnes/sfc/memory/memory.cpp
        bsnes/sfc/memory/memory.hpp
        bsnes/sfc/memory/protectable.hpp
        bsnes/sfc/memory/readable.hpp
        bsnes/sfc/memory/writable.hpp
        bsnes/sfc/ppu/counter/counter-inline.hpp
        bsnes/sfc/ppu/counter/counter.hpp
        bsnes/sfc/ppu/counter/serialization.cpp
        bsnes/sfc/ppu/background.cpp
        bsnes/sfc/ppu/background.hpp
        bsnes/sfc/ppu/io.cpp
        bsnes/sfc/ppu/mode7.cpp
        bsnes/sfc/ppu/oam.cpp
        bsnes/sfc/ppu/object.cpp
        bsnes/sfc/ppu/object.hpp
        bsnes/sfc/ppu/ppu.cpp
        bsnes/sfc/ppu/ppu.hpp
        bsnes/sfc/ppu/screen.cpp
        bsnes/sfc/ppu/screen.hpp
        bsnes/sfc/ppu/serialization.cpp
        bsnes/sfc/ppu/window.cpp
        bsnes/sfc/ppu/window.hpp
        bsnes/sfc/ppu-fast/background.cpp
        bsnes/sfc/ppu-fast/io.cpp
        bsnes/sfc/ppu-fast/line.cpp
        bsnes/sfc/ppu-fast/mode7.cpp
        bsnes/sfc/ppu-fast/mode7hd.cpp
        bsnes/sfc/ppu-fast/object.cpp
        bsnes/sfc/ppu-fast/ppu.cpp
        bsnes/sfc/ppu-fast/ppu.hpp
        bsnes/sfc/ppu-fast/serialization.cpp
        bsnes/sfc/ppu-fast/window.cpp
        bsnes/sfc/slot/bsmemory/bsmemory.cpp
        bsnes/sfc/slot/bsmemory/bsmemory.hpp
        bsnes/sfc/slot/bsmemory/serialization.cpp
        bsnes/sfc/slot/sufamiturbo/serialization.cpp
        bsnes/sfc/slot/sufamiturbo/sufamiturbo.cpp
        bsnes/sfc/slot/sufamiturbo/sufamiturbo.hpp
        bsnes/sfc/slot/slot.cpp
        bsnes/sfc/slot/slot.hpp
        bsnes/sfc/smp/io.cpp
        bsnes/sfc/smp/memory.cpp
        bsnes/sfc/smp/serialization.cpp
        bsnes/sfc/smp/smp.cpp
        bsnes/sfc/smp/smp.hpp
        bsnes/sfc/smp/timing.cpp
        bsnes/sfc/system/serialization.cpp
        bsnes/sfc/system/system.cpp
        bsnes/sfc/system/system.hpp
        bsnes/sfc/sfc.hpp
        bsnes/target-bsnes/input/hotkeys.cpp
        bsnes/target-bsnes/input/input.cpp
        bsnes/target-bsnes/input/input.hpp
        bsnes/target-bsnes/presentation/presentation.cpp
        bsnes/target-bsnes/presentation/presentation.hpp
        bsnes/target-bsnes/program/audio.cpp
        bsnes/target-bsnes/program/filter.cpp
        bsnes/target-bsnes/program/game-pak.cpp
        bsnes/target-bsnes/program/game-rom.cpp
        bsnes/target-bsnes/program/game.cpp
        bsnes/target-bsnes/program/hacks.cpp
        bsnes/target-bsnes/program/input.cpp
        bsnes/target-bsnes/program/movies.cpp
        bsnes/target-bsnes/program/patch.cpp
        bsnes/target-bsnes/program/paths.cpp
        bsnes/target-bsnes/program/platform.cpp
        bsnes/target-bsnes/program/program.cpp
        bsnes/target-bsnes/program/program.hpp
        bsnes/target-bsnes/program/rewind.cpp
        bsnes/target-bsnes/program/script.cpp
        bsnes/target-bsnes/program/states.cpp
        bsnes/target-bsnes/program/utility.cpp
        bsnes/target-bsnes/program/video.cpp
        bsnes/target-bsnes/program/viewport.cpp
        bsnes/target-bsnes/resource/resource.cpp
        bsnes/target-bsnes/resource/resource.hpp
        bsnes/target-bsnes/settings/audio.cpp
        bsnes/target-bsnes/settings/drivers.cpp
        bsnes/target-bsnes/settings/emulator.cpp
        bsnes/target-bsnes/settings/hotkeys.cpp
        bsnes/target-bsnes/settings/input.cpp
        bsnes/target-bsnes/settings/paths.cpp
        bsnes/target-bsnes/settings/settings.cpp
        bsnes/target-bsnes/settings/settings.hpp
        bsnes/target-bsnes/settings/video.cpp
        bsnes/target-bsnes/tools/cheat-editor.cpp
        bsnes/target-bsnes/tools/cheat-finder.cpp
        bsnes/target-bsnes/tools/manifest-viewer.cpp
        bsnes/target-bsnes/tools/state-manager.cpp
        bsnes/target-bsnes/tools/tools.cpp
        bsnes/target-bsnes/tools/tools.hpp
        bsnes/target-bsnes/bsnes.cpp
        bsnes/target-bsnes/bsnes.hpp
        hiro/cocoa/action/action.cpp
        hiro/cocoa/action/action.hpp
        hiro/cocoa/action/menu-check-item.cpp
        hiro/cocoa/action/menu-check-item.hpp
        hiro/cocoa/action/menu-item.cpp
        hiro/cocoa/action/menu-item.hpp
        hiro/cocoa/action/menu-radio-item.cpp
        hiro/cocoa/action/menu-radio-item.hpp
        hiro/cocoa/action/menu-separator.cpp
        hiro/cocoa/action/menu-separator.hpp
        hiro/cocoa/action/menu.cpp
        hiro/cocoa/action/menu.hpp
        hiro/cocoa/widget/button.cpp
        hiro/cocoa/widget/button.hpp
        hiro/cocoa/widget/canvas.cpp
        hiro/cocoa/widget/canvas.hpp
        hiro/cocoa/widget/check-button.cpp
        hiro/cocoa/widget/check-button.hpp
        hiro/cocoa/widget/check-label.cpp
        hiro/cocoa/widget/check-label.hpp
        hiro/cocoa/widget/combo-button-item.cpp
        hiro/cocoa/widget/combo-button-item.hpp
        hiro/cocoa/widget/combo-button.cpp
        hiro/cocoa/widget/combo-button.hpp
        hiro/cocoa/widget/console.cpp
        hiro/cocoa/widget/console.hpp
        hiro/cocoa/widget/frame.cpp
        hiro/cocoa/widget/frame.hpp
        hiro/cocoa/widget/hex-edit.cpp
        hiro/cocoa/widget/hex-edit.hpp
        hiro/cocoa/widget/horizontal-scroll-bar.cpp
        hiro/cocoa/widget/horizontal-scroll-bar.hpp
        hiro/cocoa/widget/horizontal-slider.cpp
        hiro/cocoa/widget/horizontal-slider.hpp
        hiro/cocoa/widget/label.cpp
        hiro/cocoa/widget/label.hpp
        hiro/cocoa/widget/line-edit.cpp
        hiro/cocoa/widget/line-edit.hpp
        hiro/cocoa/widget/progress-bar.cpp
        hiro/cocoa/widget/progress-bar.hpp
        hiro/cocoa/widget/radio-button.cpp
        hiro/cocoa/widget/radio-button.hpp
        hiro/cocoa/widget/radio-label.cpp
        hiro/cocoa/widget/radio-label.hpp
        hiro/cocoa/widget/tab-frame-item.cpp
        hiro/cocoa/widget/tab-frame-item.hpp
        hiro/cocoa/widget/tab-frame.cpp
        hiro/cocoa/widget/tab-frame.hpp
        hiro/cocoa/widget/table-view-cell.cpp
        hiro/cocoa/widget/table-view-cell.hpp
        hiro/cocoa/widget/table-view-column.cpp
        hiro/cocoa/widget/table-view-column.hpp
        hiro/cocoa/widget/table-view-item.cpp
        hiro/cocoa/widget/table-view-item.hpp
        hiro/cocoa/widget/table-view.cpp
        hiro/cocoa/widget/table-view.hpp
        hiro/cocoa/widget/text-edit.cpp
        hiro/cocoa/widget/text-edit.hpp
        hiro/cocoa/widget/vertical-scroll-bar.cpp
        hiro/cocoa/widget/vertical-scroll-bar.hpp
        hiro/cocoa/widget/vertical-slider.cpp
        hiro/cocoa/widget/vertical-slider.hpp
        hiro/cocoa/widget/viewport.cpp
        hiro/cocoa/widget/viewport.hpp
        hiro/cocoa/widget/widget.cpp
        hiro/cocoa/widget/widget.hpp
        hiro/cocoa/application.cpp
        hiro/cocoa/application.hpp
        hiro/cocoa/browser-window.cpp
        hiro/cocoa/browser-window.hpp
        hiro/cocoa/desktop.cpp
        hiro/cocoa/desktop.hpp
        hiro/cocoa/font.cpp
        hiro/cocoa/font.hpp
        hiro/cocoa/group.cpp
        hiro/cocoa/group.hpp
        hiro/cocoa/header.hpp
        hiro/cocoa/keyboard.cpp
        hiro/cocoa/keyboard.hpp
        hiro/cocoa/menu-bar.cpp
        hiro/cocoa/menu-bar.hpp
        hiro/cocoa/message-window.cpp
        hiro/cocoa/message-window.hpp
        hiro/cocoa/monitor.cpp
        hiro/cocoa/monitor.hpp
        hiro/cocoa/mouse.cpp
        hiro/cocoa/mouse.hpp
        hiro/cocoa/object.cpp
        hiro/cocoa/object.hpp
        hiro/cocoa/platform.cpp
        hiro/cocoa/platform.hpp
        hiro/cocoa/popup-menu.cpp
        hiro/cocoa/popup-menu.hpp
        hiro/cocoa/sizable.cpp
        hiro/cocoa/sizable.hpp
        hiro/cocoa/status-bar.cpp
        hiro/cocoa/status-bar.hpp
        hiro/cocoa/timer.cpp
        hiro/cocoa/timer.hpp
        hiro/cocoa/utility.cpp
        hiro/cocoa/window.cpp
        hiro/cocoa/window.hpp
        hiro/core/action/action.cpp
        hiro/core/action/menu-check-item.cpp
        hiro/core/action/menu-item.cpp
        hiro/core/action/menu-radio-item.cpp
        hiro/core/action/menu-separator.cpp
        hiro/core/action/menu.cpp
        hiro/core/widget/button.cpp
        hiro/core/widget/canvas.cpp
        hiro/core/widget/canvas.hpp
        hiro/core/widget/check-button.cpp
        hiro/core/widget/check-label.cpp
        hiro/core/widget/combo-button-item.cpp
        hiro/core/widget/combo-button.cpp
        hiro/core/widget/combo-edit-item.cpp
        hiro/core/widget/combo-edit.cpp
        hiro/core/widget/console.cpp
        hiro/core/widget/frame.cpp
        hiro/core/widget/hex-edit.cpp
        hiro/core/widget/horizontal-scroll-bar.cpp
        hiro/core/widget/horizontal-slider.cpp
        hiro/core/widget/icon-view-item.cpp
        hiro/core/widget/icon-view.cpp
        hiro/core/widget/label.cpp
        hiro/core/widget/label.hpp
        hiro/core/widget/line-edit.cpp
        hiro/core/widget/progress-bar.cpp
        hiro/core/widget/radio-button.cpp
        hiro/core/widget/radio-label.cpp
        hiro/core/widget/source-edit.cpp
        hiro/core/widget/source-edit.hpp
        hiro/core/widget/tab-frame-item.cpp
        hiro/core/widget/tab-frame-item.hpp
        hiro/core/widget/tab-frame.cpp
        hiro/core/widget/tab-frame.hpp
        hiro/core/widget/table-view-cell.cpp
        hiro/core/widget/table-view-cell.hpp
        hiro/core/widget/table-view-column.cpp
        hiro/core/widget/table-view-column.hpp
        hiro/core/widget/table-view-item.cpp
        hiro/core/widget/table-view-item.hpp
        hiro/core/widget/table-view.cpp
        hiro/core/widget/table-view.hpp
        hiro/core/widget/text-edit.cpp
        hiro/core/widget/text-edit.hpp
        hiro/core/widget/tree-view-item.cpp
        hiro/core/widget/tree-view-item.hpp
        hiro/core/widget/tree-view.cpp
        hiro/core/widget/tree-view.hpp
        hiro/core/widget/vertical-scroll-bar.cpp
        hiro/core/widget/vertical-slider.cpp
        hiro/core/widget/viewport.cpp
        hiro/core/widget/viewport.hpp
        hiro/core/widget/widget.cpp
        hiro/core/widget/widget.hpp
        hiro/core/alignment.cpp
        hiro/core/application.cpp
        hiro/core/application.hpp
        hiro/core/browser-window.cpp
        hiro/core/color.cpp
        hiro/core/core.cpp
        hiro/core/core.hpp
        hiro/core/desktop.cpp
        hiro/core/desktop.hpp
        hiro/core/font.cpp
        hiro/core/font.hpp
        hiro/core/geometry.cpp
        hiro/core/gradient.cpp
        hiro/core/group.cpp
        hiro/core/group.hpp
        hiro/core/hotkey.cpp
        hiro/core/keyboard.cpp
        hiro/core/lock.hpp
        hiro/core/menu-bar.cpp
        hiro/core/message-window.cpp
        hiro/core/monitor.cpp
        hiro/core/monitor.hpp
        hiro/core/mouse-cursor.cpp
        hiro/core/mouse-cursor.hpp
        hiro/core/mouse.cpp
        hiro/core/object.cpp
        hiro/core/object.hpp
        hiro/core/popup-menu.cpp
        hiro/core/position.cpp
        hiro/core/attribute.cpp
        hiro/core/attribute.hpp
        hiro/core/shared.hpp
        hiro/core/sizable.cpp
        hiro/core/sizable.hpp
        hiro/core/size.cpp
        hiro/core/status-bar.cpp
        hiro/core/text-cursor.cpp
        hiro/core/text-cursor.hpp
        hiro/core/timer.cpp
        hiro/core/timer.hpp
        hiro/core/window.cpp
        hiro/core/window.hpp
        hiro/extension/about-dialog.cpp
        hiro/extension/about-dialog.hpp
        hiro/extension/browser-dialog.cpp
        hiro/extension/browser-dialog.hpp
        hiro/extension/extension.cpp
        hiro/extension/extension.hpp
        hiro/extension/fixed-layout.cpp
        hiro/extension/fixed-layout.hpp
        hiro/extension/horizontal-layout.cpp
        hiro/extension/horizontal-layout.hpp
        hiro/extension/horizontal-resize-grip.cpp
        hiro/extension/horizontal-resize-grip.hpp
        hiro/extension/list-view.cpp
        hiro/extension/list-view.hpp
        hiro/extension/message-dialog.cpp
        hiro/extension/message-dialog.hpp
        hiro/extension/name-dialog.cpp
        hiro/extension/name-dialog.hpp
        hiro/extension/shared.hpp
        hiro/extension/table-layout.cpp
        hiro/extension/table-layout.hpp
        hiro/extension/vertical-layout.cpp
        hiro/extension/vertical-layout.hpp
        hiro/extension/vertical-resize-grip.cpp
        hiro/extension/vertical-resize-grip.hpp
        hiro/gtk/action/action.cpp
        hiro/gtk/action/action.hpp
        hiro/gtk/action/menu-check-item.cpp
        hiro/gtk/action/menu-check-item.hpp
        hiro/gtk/action/menu-item.cpp
        hiro/gtk/action/menu-item.hpp
        hiro/gtk/action/menu-radio-item.cpp
        hiro/gtk/action/menu-radio-item.hpp
        hiro/gtk/action/menu-separator.cpp
        hiro/gtk/action/menu-separator.hpp
        hiro/gtk/action/menu.cpp
        hiro/gtk/action/menu.hpp
        hiro/gtk/widget/button.cpp
        hiro/gtk/widget/button.hpp
        hiro/gtk/widget/canvas.cpp
        hiro/gtk/widget/canvas.hpp
        hiro/gtk/widget/check-button.cpp
        hiro/gtk/widget/check-button.hpp
        hiro/gtk/widget/check-label.cpp
        hiro/gtk/widget/check-label.hpp
        hiro/gtk/widget/combo-button-item.cpp
        hiro/gtk/widget/combo-button-item.hpp
        hiro/gtk/widget/combo-button.cpp
        hiro/gtk/widget/combo-button.hpp
        hiro/gtk/widget/combo-edit-item.cpp
        hiro/gtk/widget/combo-edit-item.hpp
        hiro/gtk/widget/combo-edit.cpp
        hiro/gtk/widget/combo-edit.hpp
        hiro/gtk/widget/console.cpp
        hiro/gtk/widget/console.hpp
        hiro/gtk/widget/frame.cpp
        hiro/gtk/widget/frame.hpp
        hiro/gtk/widget/hex-edit.cpp
        hiro/gtk/widget/hex-edit.hpp
        hiro/gtk/widget/horizontal-scroll-bar.cpp
        hiro/gtk/widget/horizontal-scroll-bar.hpp
        hiro/gtk/widget/horizontal-slider.cpp
        hiro/gtk/widget/horizontal-slider.hpp
        hiro/gtk/widget/icon-view-item.cpp
        hiro/gtk/widget/icon-view-item.hpp
        hiro/gtk/widget/icon-view.cpp
        hiro/gtk/widget/icon-view.hpp
        hiro/gtk/widget/label.cpp
        hiro/gtk/widget/label.hpp
        hiro/gtk/widget/line-edit.cpp
        hiro/gtk/widget/line-edit.hpp
        hiro/gtk/widget/progress-bar.cpp
        hiro/gtk/widget/progress-bar.hpp
        hiro/gtk/widget/radio-button.cpp
        hiro/gtk/widget/radio-button.hpp
        hiro/gtk/widget/radio-label.cpp
        hiro/gtk/widget/radio-label.hpp
        hiro/gtk/widget/source-edit.cpp
        hiro/gtk/widget/source-edit.hpp
        hiro/gtk/widget/tab-frame-item.cpp
        hiro/gtk/widget/tab-frame-item.hpp
        hiro/gtk/widget/tab-frame.cpp
        hiro/gtk/widget/tab-frame.hpp
        hiro/gtk/widget/table-view-cell.cpp
        hiro/gtk/widget/table-view-cell.hpp
        hiro/gtk/widget/table-view-column.cpp
        hiro/gtk/widget/table-view-column.hpp
        hiro/gtk/widget/table-view-item.cpp
        hiro/gtk/widget/table-view-item.hpp
        hiro/gtk/widget/table-view.cpp
        hiro/gtk/widget/table-view.hpp
        hiro/gtk/widget/text-edit.cpp
        hiro/gtk/widget/text-edit.hpp
        hiro/gtk/widget/tree-view-item.cpp
        hiro/gtk/widget/tree-view-item.hpp
        hiro/gtk/widget/tree-view.cpp
        hiro/gtk/widget/tree-view.hpp
        hiro/gtk/widget/vertical-scroll-bar.cpp
        hiro/gtk/widget/vertical-scroll-bar.hpp
        hiro/gtk/widget/vertical-slider.cpp
        hiro/gtk/widget/vertical-slider.hpp
        hiro/gtk/widget/viewport.cpp
        hiro/gtk/widget/viewport.hpp
        hiro/gtk/widget/widget.cpp
        hiro/gtk/widget/widget.hpp
        hiro/gtk/application.cpp
        hiro/gtk/application.hpp
        hiro/gtk/browser-window.cpp
        hiro/gtk/browser-window.hpp
        hiro/gtk/desktop.cpp
        hiro/gtk/desktop.hpp
        hiro/gtk/font.cpp
        hiro/gtk/font.hpp
        hiro/gtk/group.cpp
        hiro/gtk/group.hpp
        hiro/gtk/header.hpp
        hiro/gtk/keyboard.cpp
        hiro/gtk/keyboard.hpp
        hiro/gtk/menu-bar.cpp
        hiro/gtk/menu-bar.hpp
        hiro/gtk/message-window.cpp
        hiro/gtk/message-window.hpp
        hiro/gtk/monitor.cpp
        hiro/gtk/monitor.hpp
        hiro/gtk/mouse.cpp
        hiro/gtk/mouse.hpp
        hiro/gtk/object.cpp
        hiro/gtk/object.hpp
        hiro/gtk/platform.cpp
        hiro/gtk/platform.hpp
        hiro/gtk/popup-menu.cpp
        hiro/gtk/popup-menu.hpp
        hiro/gtk/settings.cpp
        hiro/gtk/settings.hpp
        hiro/gtk/sizable.cpp
        hiro/gtk/sizable.hpp
        hiro/gtk/status-bar.cpp
        hiro/gtk/status-bar.hpp
        hiro/gtk/timer.cpp
        hiro/gtk/timer.hpp
        hiro/gtk/utility.cpp
        hiro/gtk/window.cpp
        hiro/gtk/window.hpp
        hiro/platform/windows/keyboard.hpp
        hiro/platform/xorg/keyboard.hpp
        hiro/qt/action/action.cpp
        hiro/qt/action/action.hpp
        hiro/qt/action/menu-check-item.cpp
        hiro/qt/action/menu-check-item.hpp
        hiro/qt/action/menu-item.cpp
        hiro/qt/action/menu-item.hpp
        hiro/qt/action/menu-radio-item.cpp
        hiro/qt/action/menu-radio-item.hpp
        hiro/qt/action/menu-separator.cpp
        hiro/qt/action/menu-separator.hpp
        hiro/qt/action/menu.cpp
        hiro/qt/action/menu.hpp
        hiro/qt/widget/button.cpp
        hiro/qt/widget/button.hpp
        hiro/qt/widget/canvas.cpp
        hiro/qt/widget/canvas.hpp
        hiro/qt/widget/check-button.cpp
        hiro/qt/widget/check-button.hpp
        hiro/qt/widget/check-label.cpp
        hiro/qt/widget/check-label.hpp
        hiro/qt/widget/combo-button-item.cpp
        hiro/qt/widget/combo-button-item.hpp
        hiro/qt/widget/combo-button.cpp
        hiro/qt/widget/combo-button.hpp
        hiro/qt/widget/frame.cpp
        hiro/qt/widget/frame.hpp
        hiro/qt/widget/hex-edit.cpp
        hiro/qt/widget/hex-edit.hpp
        hiro/qt/widget/horizontal-scroll-bar.cpp
        hiro/qt/widget/horizontal-scroll-bar.hpp
        hiro/qt/widget/horizontal-slider.cpp
        hiro/qt/widget/horizontal-slider.hpp
        hiro/qt/widget/label.cpp
        hiro/qt/widget/label.hpp
        hiro/qt/widget/line-edit.cpp
        hiro/qt/widget/line-edit.hpp
        hiro/qt/widget/progress-bar.cpp
        hiro/qt/widget/progress-bar.hpp
        hiro/qt/widget/radio-button.cpp
        hiro/qt/widget/radio-button.hpp
        hiro/qt/widget/radio-label.cpp
        hiro/qt/widget/radio-label.hpp
        hiro/qt/widget/tab-frame-item.cpp
        hiro/qt/widget/tab-frame-item.hpp
        hiro/qt/widget/tab-frame.cpp
        hiro/qt/widget/tab-frame.hpp
        hiro/qt/widget/table-view-cell.cpp
        hiro/qt/widget/table-view-cell.hpp
        hiro/qt/widget/table-view-column.cpp
        hiro/qt/widget/table-view-column.hpp
        hiro/qt/widget/table-view-item.cpp
        hiro/qt/widget/table-view-item.hpp
        hiro/qt/widget/table-view.cpp
        hiro/qt/widget/table-view.hpp
        hiro/qt/widget/text-edit.cpp
        hiro/qt/widget/text-edit.hpp
        hiro/qt/widget/vertical-scroll-bar.cpp
        hiro/qt/widget/vertical-scroll-bar.hpp
        hiro/qt/widget/vertical-slider.cpp
        hiro/qt/widget/vertical-slider.hpp
        hiro/qt/widget/viewport.cpp
        hiro/qt/widget/viewport.hpp
        hiro/qt/widget/widget.cpp
        hiro/qt/widget/widget.hpp
        hiro/qt/application.cpp
        hiro/qt/application.hpp
        hiro/qt/browser-window.cpp
        hiro/qt/browser-window.hpp
        hiro/qt/desktop.cpp
        hiro/qt/desktop.hpp
        hiro/qt/font.cpp
        hiro/qt/font.hpp
        hiro/qt/group.cpp
        hiro/qt/group.hpp
        hiro/qt/header.hpp
        hiro/qt/keyboard.cpp
        hiro/qt/keyboard.hpp
        hiro/qt/menu-bar.cpp
        hiro/qt/menu-bar.hpp
        hiro/qt/message-window.cpp
        hiro/qt/message-window.hpp
        hiro/qt/monitor.cpp
        hiro/qt/monitor.hpp
        hiro/qt/mouse.cpp
        hiro/qt/mouse.hpp
        hiro/qt/object.cpp
        hiro/qt/object.hpp
        hiro/qt/platform.cpp
        hiro/qt/platform.hpp
        hiro/qt/popup-menu.cpp
        hiro/qt/popup-menu.hpp
        hiro/qt/qt.hpp
        hiro/qt/settings.cpp
        hiro/qt/settings.hpp
        hiro/qt/sizable.cpp
        hiro/qt/sizable.hpp
        hiro/qt/status-bar.cpp
        hiro/qt/status-bar.hpp
        hiro/qt/timer.cpp
        hiro/qt/timer.hpp
        hiro/qt/utility.cpp
        hiro/qt/window.cpp
        hiro/qt/window.hpp
        hiro/resource/resource.cpp
        hiro/resource/resource.hpp
        hiro/windows/action/action.cpp
        hiro/windows/action/action.hpp
        hiro/windows/action/menu-check-item.cpp
        hiro/windows/action/menu-check-item.hpp
        hiro/windows/action/menu-item.cpp
        hiro/windows/action/menu-item.hpp
        hiro/windows/action/menu-radio-item.cpp
        hiro/windows/action/menu-radio-item.hpp
        hiro/windows/action/menu-separator.cpp
        hiro/windows/action/menu-separator.hpp
        hiro/windows/action/menu.cpp
        hiro/windows/action/menu.hpp
        hiro/windows/widget/button.cpp
        hiro/windows/widget/button.hpp
        hiro/windows/widget/canvas.cpp
        hiro/windows/widget/canvas.hpp
        hiro/windows/widget/check-button.cpp
        hiro/windows/widget/check-button.hpp
        hiro/windows/widget/check-label.cpp
        hiro/windows/widget/check-label.hpp
        hiro/windows/widget/combo-button-item.cpp
        hiro/windows/widget/combo-button-item.hpp
        hiro/windows/widget/combo-button.cpp
        hiro/windows/widget/combo-button.hpp
        hiro/windows/widget/frame.cpp
        hiro/windows/widget/frame.hpp
        hiro/windows/widget/hex-edit.cpp
        hiro/windows/widget/hex-edit.hpp
        hiro/windows/widget/horizontal-scroll-bar.cpp
        hiro/windows/widget/horizontal-scroll-bar.hpp
        hiro/windows/widget/horizontal-slider.cpp
        hiro/windows/widget/horizontal-slider.hpp
        hiro/windows/widget/label.cpp
        hiro/windows/widget/label.hpp
        hiro/windows/widget/line-edit.cpp
        hiro/windows/widget/line-edit.hpp
        hiro/windows/widget/progress-bar.cpp
        hiro/windows/widget/progress-bar.hpp
        hiro/windows/widget/radio-button.cpp
        hiro/windows/widget/radio-button.hpp
        hiro/windows/widget/radio-label.cpp
        hiro/windows/widget/radio-label.hpp
        hiro/windows/widget/tab-frame-item.cpp
        hiro/windows/widget/tab-frame-item.hpp
        hiro/windows/widget/tab-frame.cpp
        hiro/windows/widget/tab-frame.hpp
        hiro/windows/widget/table-view-cell.cpp
        hiro/windows/widget/table-view-cell.hpp
        hiro/windows/widget/table-view-column.cpp
        hiro/windows/widget/table-view-column.hpp
        hiro/windows/widget/table-view-item.cpp
        hiro/windows/widget/table-view-item.hpp
        hiro/windows/widget/table-view.cpp
        hiro/windows/widget/table-view.hpp
        hiro/windows/widget/text-edit.cpp
        hiro/windows/widget/text-edit.hpp
        hiro/windows/widget/vertical-scroll-bar.cpp
        hiro/windows/widget/vertical-scroll-bar.hpp
        hiro/windows/widget/vertical-slider.cpp
        hiro/windows/widget/vertical-slider.hpp
        hiro/windows/widget/viewport.cpp
        hiro/windows/widget/viewport.hpp
        hiro/windows/widget/widget.cpp
        hiro/windows/widget/widget.hpp
        hiro/windows/application.cpp
        hiro/windows/application.hpp
        hiro/windows/browser-window.cpp
        hiro/windows/browser-window.hpp
        hiro/windows/desktop.cpp
        hiro/windows/desktop.hpp
        hiro/windows/font.cpp
        hiro/windows/font.hpp
        hiro/windows/group.cpp
        hiro/windows/group.hpp
        hiro/windows/header.hpp
        hiro/windows/keyboard.cpp
        hiro/windows/keyboard.hpp
        hiro/windows/menu-bar.cpp
        hiro/windows/menu-bar.hpp
        hiro/windows/message-window.cpp
        hiro/windows/message-window.hpp
        hiro/windows/monitor.cpp
        hiro/windows/monitor.hpp
        hiro/windows/mouse.cpp
        hiro/windows/mouse.hpp
        hiro/windows/object.cpp
        hiro/windows/object.hpp
        hiro/windows/platform.cpp
        hiro/windows/platform.hpp
        hiro/windows/popup-menu.cpp
        hiro/windows/popup-menu.hpp
        hiro/windows/settings.cpp
        hiro/windows/settings.hpp
        hiro/windows/sizable.cpp
        hiro/windows/sizable.hpp
        hiro/windows/status-bar.cpp
        hiro/windows/status-bar.hpp
        hiro/windows/timer.cpp
        hiro/windows/timer.hpp
        hiro/windows/tool-tip.cpp
        hiro/windows/tool-tip.hpp
        hiro/windows/utility.cpp
        hiro/windows/window.cpp
        hiro/windows/window.hpp
        hiro/components.hpp
        hiro/hiro.cpp
        hiro/hiro.hpp
        libco/aarch64.c
        libco/amd64.c
        libco/arm.c
        libco/fiber.c
        libco/libco.c
        libco/libco.h
        libco/ppc.c
        libco/ppc64v2.c
        libco/settings.h
        libco/sjlj.c
        libco/ucontext.c
        libco/x86.c
        nall/arithmetic/barrett.hpp
        nall/arithmetic/natural.hpp
        nall/arithmetic/unsigned.hpp
        nall/beat/archive/container.hpp
        nall/beat/archive/create.hpp
        nall/beat/archive/extract.hpp
        nall/beat/archive/node.hpp
        nall/beat/single/apply.hpp
        nall/beat/single/create.hpp
        nall/cd/crc16.hpp
        nall/cd/edc.hpp
        nall/cd/efm.hpp
        nall/cd/rspc.hpp
        nall/cd/scrambler.hpp
        nall/cd/session.hpp
        nall/cd/sync.hpp
        nall/cipher/chacha20.hpp
        nall/database/odbc.hpp
        nall/database/sqlite3.hpp
        nall/decode/base.hpp
        nall/decode/base64.hpp
        nall/decode/bmp.hpp
        nall/decode/bwt.hpp
        nall/decode/gzip.hpp
        nall/decode/html.hpp
        nall/decode/huffman.hpp
        nall/decode/inflate.hpp
        nall/decode/lzsa.hpp
        nall/decode/mtf.hpp
        nall/decode/png.hpp
        nall/decode/rle.hpp
        nall/decode/url.hpp
        nall/decode/zip.hpp
        nall/dsp/iir/biquad.hpp
        nall/dsp/iir/dc-removal.hpp
        nall/dsp/iir/one-pole.hpp
        nall/dsp/resampler/cubic.hpp
        nall/dsp/dsp.hpp
        nall/elliptic-curve/curve25519.hpp
        nall/elliptic-curve/ed25519.hpp
        nall/elliptic-curve/modulo25519-optimized.hpp
        nall/elliptic-curve/modulo25519-reference.hpp
        nall/emulation/21fx.hpp
        nall/encode/base.hpp
        nall/encode/base64.hpp
        nall/encode/bmp.hpp
        nall/encode/bwt.hpp
        nall/encode/html.hpp
        nall/encode/huffman.hpp
        nall/encode/lzsa.hpp
        nall/encode/mtf.hpp
        nall/encode/rle.hpp
        nall/encode/url.hpp
        nall/encode/zip.hpp
        nall/hash/crc16.hpp
        nall/hash/crc32.hpp
        nall/hash/crc64.hpp
        nall/hash/hash.hpp
        nall/hash/sha224.hpp
        nall/hash/sha256.hpp
        nall/hash/sha384.hpp
        nall/hash/sha512.hpp
        nall/http/client.hpp
        nall/http/message.hpp
        nall/http/request.hpp
        nall/http/response.hpp
        nall/http/role.hpp
        nall/http/server.hpp
        nall/image/blend.hpp
        nall/image/core.hpp
        nall/image/fill.hpp
        nall/image/interpolation.hpp
        nall/image/load.hpp
        nall/image/scale.hpp
        nall/image/static.hpp
        nall/image/utility.hpp
        nall/mac/poly1305.hpp
        nall/macos/guard.hpp
        nall/posix/service.hpp
        nall/posix/shared-memory.hpp
        nall/primitives/bit-field.hpp
        nall/primitives/bit-range.hpp
        nall/primitives/boolean.hpp
        nall/primitives/integer.hpp
        nall/primitives/literals.hpp
        nall/primitives/natural.hpp
        nall/primitives/real.hpp
        nall/primitives/types.hpp
        nall/string/allocator/adaptive.hpp
        nall/string/allocator/copy-on-write.hpp
        nall/string/allocator/small-string-optimization.hpp
        nall/string/allocator/vector.hpp
        nall/string/eval/evaluator.hpp
        nall/string/eval/literal.hpp
        nall/string/eval/node.hpp
        nall/string/eval/parser.hpp
        nall/string/markup/bml.hpp
        nall/string/markup/find.hpp
        nall/string/markup/node.hpp
        nall/string/markup/xml.hpp
        nall/string/transform/cml.hpp
        nall/string/transform/dml.hpp
        nall/string/atoi.hpp
        nall/string/cast.hpp
        nall/string/compare.hpp
        nall/string/convert.hpp
        nall/string/core.hpp
        nall/string/find.hpp
        nall/string/format.hpp
        nall/string/match.hpp
        nall/string/pascal.hpp
        nall/string/replace.hpp
        nall/string/split.hpp
        nall/string/trim.hpp
        nall/string/utf8.hpp
        nall/string/utility.hpp
        nall/string/vector.hpp
        nall/string/view.hpp
        nall/vector/specialization/uint8_t.hpp
        nall/vector/access.hpp
        nall/vector/assign.hpp
        nall/vector/compare.hpp
        nall/vector/core.hpp
        nall/vector/iterator.hpp
        nall/vector/memory.hpp
        nall/vector/modify.hpp
        nall/vector/utility.hpp
        nall/vfs/fs/file.hpp
        nall/vfs/memory/file.hpp
        nall/vfs/vfs.hpp
        nall/windows/detour.hpp
        nall/windows/guard.hpp
        nall/windows/guid.hpp
        nall/windows/launcher.hpp
        nall/windows/registry.hpp
        nall/windows/service.hpp
        nall/windows/shared-memory.hpp
        nall/windows/utf8.hpp
        nall/xorg/clipboard.hpp
        nall/xorg/guard.hpp
        nall/xorg/xorg.hpp
        nall/adaptive-array.hpp
        nall/algorithm.hpp
        nall/any.hpp
        nall/arguments.hpp
        nall/arithmetic.hpp
        nall/array-span.hpp
        nall/array-view.hpp
        nall/array.hpp
        nall/atoi.hpp
        nall/bit.hpp
        nall/cd.hpp
        nall/chrono.hpp
        nall/counting-sort.hpp
        nall/directory.hpp
        nall/dl.hpp
        nall/endian.hpp
        nall/file-buffer.hpp
        nall/file-map.hpp
        nall/file.hpp
        nall/function.hpp
        nall/galois-field.hpp
        nall/hashset.hpp
        nall/hid.hpp
        nall/image.hpp
        nall/induced-sort.hpp
        nall/inline-if.hpp
        nall/inode.hpp
        nall/instance.hpp
        nall/interpolation.hpp
        nall/intrinsics.hpp
        nall/iterator.hpp
        nall/literals.hpp
        nall/locale.hpp
        nall/location.hpp
        nall/main.hpp
        nall/map.hpp
        nall/matrix-multiply.hpp
        nall/matrix.hpp
        nall/maybe.hpp
        nall/memory.hpp
        nall/merge-sort.hpp
        nall/nall.hpp
        nall/path.hpp
        nall/platform.hpp
        nall/pointer.hpp
        nall/primitives.hpp
        nall/queue.hpp
        nall/random.hpp
        nall/range.hpp
        nall/reed-solomon.hpp
        nall/run.hpp
        nall/serial.hpp
        nall/serializer.hpp
        nall/service.hpp
        nall/set.hpp
        nall/shared-memory.hpp
        nall/shared-pointer.hpp
        nall/simd.hpp
        nall/smtp.hpp
        nall/stdint.hpp
        nall/string.hpp
        nall/suffix-array.hpp
        nall/terminal.hpp
        nall/thread.hpp
        nall/traits.hpp
        nall/unique-pointer.hpp
        nall/utility.hpp
        nall/variant.hpp
        nall/varint.hpp
        nall/vector.hpp
        nall/vfs.hpp
        nall/view.hpp
        ruby/audio/alsa.cpp
        ruby/audio/ao.cpp
        ruby/audio/asio.cpp
        ruby/audio/asio.hpp
        ruby/audio/audio.cpp
        ruby/audio/audio.hpp
        ruby/audio/directsound.cpp
        ruby/audio/openal.cpp
        ruby/audio/oss.cpp
        ruby/audio/pulseaudio-simple.cpp
        ruby/audio/pulseaudio.cpp
        ruby/audio/wasapi.cpp
        ruby/audio/waveout.cpp
        ruby/audio/xaudio2.cpp
        ruby/audio/xaudio2.hpp
        ruby/input/joypad/directinput.cpp
        ruby/input/joypad/sdl.cpp
        ruby/input/joypad/udev.cpp
        ruby/input/joypad/xinput.cpp
        ruby/input/keyboard/carbon.cpp
        ruby/input/keyboard/quartz.cpp
        ruby/input/keyboard/rawinput.cpp
        ruby/input/keyboard/xlib.cpp
        ruby/input/mouse/rawinput.cpp
        ruby/input/mouse/xlib.cpp
        ruby/input/shared/rawinput.cpp
        ruby/input/carbon.cpp
        ruby/input/input.cpp
        ruby/input/input.hpp
        ruby/input/quartz.cpp
        ruby/input/sdl.cpp
        ruby/input/udev.cpp
        ruby/input/windows.cpp
        ruby/input/xlib.cpp
        ruby/video/opengl/bind.hpp
        ruby/video/opengl/main.hpp
        ruby/video/opengl/opengl.hpp
        ruby/video/opengl/program.hpp
        ruby/video/opengl/shaders.hpp
        ruby/video/opengl/surface.hpp
        ruby/video/opengl/texture.hpp
        ruby/video/opengl/utility.hpp
        ruby/video/cgl.cpp
        ruby/video/direct3d.cpp
        ruby/video/directdraw.cpp
        ruby/video/gdi.cpp
        ruby/video/glx.cpp
        ruby/video/glx2.cpp
        ruby/video/video.cpp
        ruby/video/video.hpp
        ruby/video/wgl.cpp
        ruby/video/xshm.cpp
        ruby/video/xvideo.cpp
        ruby/ruby.cpp
        ruby/ruby.hpp
        sourcery/sourcery.cpp)
